# hpvsim

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.rst  CODE_OF_CONDUCT.rst  LICENSE  MANIFEST.in  README.md  README.rst  environment.yml  experiment.py  pyproject.toml  requirements.txt  setup.py
.lprof/: settings.json
data/: get_age_data.py  get_birth_data.py  get_data.py  get_death_data.py
docs/: Makefile  README.md  build_docs  conf.py  data.country_age_data.rst  data.loaders.rst  data.rst  defaults.rst  hpvsim.rst  immunity.rst  index.html  index.rst  interventions.rst  make.bat  modules.rst  overview.rst  people.rst  population.rst  requirements.txt  tutorials.rst  variables.txt
examples/: t05_screen_algorithms.py
hpvsim/: __init__.py  analysis.py  base.py  calibration.py  calibration_jccalib.py  defaults.py  hiv.py  immunity.py  interventions.py  misc.py  network_dx.py  parameters.py  people.py  plotting.py  population.py  run.py  settings.py  sim.py  utils.py  version.py
tests/: .coveragerc  README.rst  baseline.json  benchmark.json  benchmark_profile.py  check_benchmark  check_coverage  hpvsim_v1.2.2.yml  init_dev_tests.py  param_space.csv  param_space_filled.csv  param_space_filled_nolatency.csv  requirements_test.txt  run_tests  simple.py  test_analysis.py  test_baselines.py  test_calibration.py  test_ccuts.py  test_data.py  test_demo.py  test_event_schedule.py  test_hiv.py  test_interventions.py  test_latency.py  test_logistic.py  test_network.py  test_parameter_exploration.py  test_precalib_exploration.py  test_run.py  test_sampler.py  test_sim.py  test_sobol.py  tut_parameter_exploration.ipynb  (+1 more)
(+112 files in other folders)
